<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/keywordText"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:textColor="@color/ebay_blue"
        android:text="@string/keyword" />

    <EditText
        android:id="@+id/keyword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_marginBottom="10dp"
        android:hint="@string/kwdPlaceholder" />

    <TextView
        android:id="@+id/keywordError"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:text="@string/kwdError"
        android:textColor="#FF0000"
        android:textStyle="italic"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/priceRange"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:textColor="@color/ebay_blue"
        android:text="@string/priceTxt" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="2dp"
        android:paddingRight="2dp"
        android:layout_marginBottom="10dp">

        <EditText
            android:id="@+id/minPrice"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/minPrice"
            android:inputType="numberSigned"
            android:layout_alignParentStart="true"/>

        <EditText
            android:id="@+id/maxPrice"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:ems="10"
            android:inputType="numberSigned"
            android:hint="@string/maxPrice"/>

        <TextView
            android:id="@+id/priceError"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:text="@string/priceErrorDisplay"
            android:layout_below="@id/maxPrice"
            android:textColor="#FF0000"
            android:textStyle="italic"
            android:visibility="gone"/>
    </RelativeLayout>

    <TextView
        android:id="@+id/condition"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:text="@string/condition"
        android:textColor="@color/ebay_blue" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:layout_marginBottom="10dp">

        <CheckBox
            android:id="@+id/newCondition"
            android:layout_width="88dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/newConditionValue"
            android:textStyle="italic" />

        <CheckBox
            android:id="@+id/usedCondition"
            android:layout_width="103dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/usedConditionValue"
            android:textStyle="italic" />

        <CheckBox
            android:id="@+id/unspecifiedCondition"
            android:layout_width="119dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/unspecifiedConditionValue"
            android:textStyle="italic" />
    </RelativeLayout>

    <TextView
        android:id="@+id/sortByText"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:text="@string/sortBy"
        android:textColor="@color/ebay_blue" />

    <Spinner
        android:id="@+id/sortCategory"
        android:layout_width="match_parent"
        android:layout_height="39dp"
        android:entries="@array/sortCategory" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="101dp"
        android:paddingLeft="10dp"
        android:paddingTop="25dp"
        android:paddingRight="10dp">

        <Button
            android:id="@+id/search"
            android:layout_width="165dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:background="@color/ebay_blue"
            android:text="SEARCH"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/clear"
            android:layout_width="165dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:background="@color/ebay_blue"
            android:text="CLEAR"
            android:textColor="#FFFFFF" />
    </RelativeLayout>

</LinearLayout>